# fhirpath-py

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml  publish.yaml
fhirpathpy/: __init__.py  dsl_impl.py
fhirpathpy/engine/: __init__.py  nodes.py  util.py
fhirpathpy/engine/evaluators/: __init__.py
fhirpathpy/engine/invocations/: __init__.py  aggregate.py  collections.py  combining.py  constants.py  datetime.py  deepEqual.py  equality.py  existence.py  filtering.py  logic.py  math.py  misc.py  navigation.py  strings.py  subsetting.py  types.py
fhirpathpy/models/: __init__.py
fhirpathpy/parser/: ASTPathListener.py  README.md  __init__.py
parser/: ASTPathListener.py  __init__.py
src/parser/: __init__.py
tests/: conftest.py  test_additional.py  test_context.py  test_dsl.py  test_equivalence.py  test_evaluatores.py  test_evaluators.py  test_helpers.py  test_parser.py  test_real.py
tests/cases/: 3.2_paths.yaml  5.1_existence.yaml  5.2.8_coalesce.yaml  5.4_combining.yaml  5.5_conversion.yaml  5.6_string_manipulation.yaml  5.7_additional_string_functions.yaml  5.9_utility_functions.yaml  6.1_equality.yaml  6.2_comparision.yaml  6.4_collection.yaml  6.4_collections.yaml  6.6_math.yaml  8_variables.yaml  fhir-r4.yaml
tests/context/: __init__.py
tests/context/r4/: __init__.py
tests/fixtures/ast/: %v+2.json  Observation.value.json  Patient.name.given.json  a.b+2.json
tests/resources/: __init__.py
