[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --color=yes --cov=fhirpathpy --cov-report=xml"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
python_functions = "*_test"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fhirpathpy"
description = "FHIRPath implementation in Python"
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = ["fhir", "fhirpath"]
dynamic = ["version"]
authors = [{ name = "beda.software", email = "fhirpath@beda.software" }]
dependencies = ["antlr4-python3-runtime~=4.10", "python-dateutil~=2.8"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest==7.1.1", "pyyaml==5.4", "pydantic==2.13.1"]

[project.urls]
Homepage = "https://github.com/beda-software/fhirpath-py"
Documentation = "https://github.com/beda-software/fhirpath-py#readme"
Source = "https://github.com/beda-software/fhirpath-py.git"
Changelog = "https://github.com/beda-software/fhirpath-py/blob/master/CHANGELOG.md"


[tool.ruff]
target-version = "py310"
line-length = 100
include = ["fhirpathpy/**/*.py", "tests/**/*.py"]
exclude = ["fhirpathpy/parser/**/*.py"]

[tool.ruff.lint]
select = ["B", "F", "I", "E", "UP", "N", "PL", "PERF"]
# N8* is not relevant for us because of legacy code
ignore = ["E501", "N801", "N802", "N805", "N815", "N816", "N803", "N806", "PLR0911", "PLR0912", "PLR0915", "PLR2004", "PLW0211"]
unfixable = ["F401"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]


[tool.autohooks]
mode = "pipenv"
pre-commit = ["autohooks.plugins.ruff.check", "autohooks.plugins.ruff.format"]
